:bug: Fix overflow problem in accounts gallery in Home component

--- a/client/src/components/home/components/createAccount/create-account.styles.mobile.scss
+++ b/client/src/components/home/components/createAccount/create-account.styles.mobile.scss
@@ -12,7 +12,7 @@
 
       @keyframes create-account-animation {
         to {
-          transform: translateY(27.5vh);
+          transform: translateY(29vh);
         }
       }
 
